# bookstore

./: .catalystrc  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: heroku-deploy.yml  python-anywhere-deploy.yml  pythonanywhere-deploy.yml
bookstore/: settings.py  urls.py  views.py  wsgi.py
order/migrations/: 0001_initial.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category_and_more.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: product_viewset.py
staticfiles/: staticfiles.json
