[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Book store API"
authors = ["Lucas Vizentin <Lucas.Vizentin@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-extensions = "^3.2.3"
pytest = "^8.2.1"
djangorestframework = "^3.15.1"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
